--- a/front/app/components/searchBar/searchBar.html
+++ b/front/app/components/searchBar/searchBar.html
@@ -4,10 +4,8 @@
         <input id="searchInput" class="input-lg" type="text" placeholder="{{ searchTitle }}">
         <button class="btn btn-success btn-lg btnSearchInput">Enter</button>
     </div>
-    <div class="graphView col-md-12 marginTop10">
-        <h2 class="marginTop10 col-md-12 ">{{graphViewTitle}}</h2>
-        <div class="graphWindow col-md-12">
-
-        </div>
-    </div>
 </div>
+
+
+<div ng-include="'app/components/GraphView/graphView.html'"></div>
+
