--- a/front/app/components/searchBar/searchBar.html
+++ b/front/app/components/searchBar/searchBar.html
@@ -1,6 +1,6 @@
 <div ng-controller="searchBarCtrl">
     <div class="col-md-12  marginTop10 searchSection">
-        <label for="searchInput" class="searchLabel">Search the Graph : </label>
+        <label for="searchInput" class="searchLabel"><i class="icon-search"></i> Search the Graph : </label>
         <input id="searchInput" class="input-lg" type="text" placeholder="{{ searchTitle }}">
         <button class="btn btn-success btn-lg btnSearchInput">Enter</button>
     </div>
