19 nodes from real data working

--- a/front/app/components/GraphView/graphView.html
+++ b/front/app/components/GraphView/graphView.html
@@ -1,7 +1,7 @@
 <div class="graphView col-md-12 marginTop10" ng-controller="graphController">
     <h2 class="marginTop10 col-md-12 ">{{graphViewTitle}}</h2>
     <div class="graphWindow col-md-12">
-        <graph-view d3-links="viewLinks" d3-nodes="viewNodes"> </graph-view>
+        <graph-view d3-links="createdLinks" d3-nodes="createdNodes"> </graph-view>
 
     </div>
 </div>
