--- a/front/app/components/GraphView/graphView.html
+++ b/front/app/components/GraphView/graphView.html
@@ -4,6 +4,14 @@
         <graph-view d3-links="createdLinks" d3-nodes="createdNodes"> </graph-view>
 
     </div>
+    <div>
+    <span class="graphData">Nodes : {{nodeCounts}} </span>
+    <span class="graphData"> Edges : {{linkCounts}}</span>
+    </div>
+    <div class="marginTop10">
+        <span class="graphData">Current Node Name :  </span>
+        <span id="nodeName" class="graphData"></span>
+    </div>
 </div>
 
 
