--- a/front/app/components/GraphView/graphView.html
+++ b/front/app/components/GraphView/graphView.html
@@ -1,5 +1,8 @@
+
+<div ng-include="'app/components/searchBar/searchBar.html'"></div>
+
 <div class="graphView col-md-12 marginTop10" ng-controller="graphController">
-    <h2 class="marginTop10 col-md-12 ">{{graphViewTitle}}</h2>
+    <h2 class="marginTop10 col-md-12 "><i class="fa fa-codepen" aria-hidden="true"></i> {{graphViewTitle}}</h2>
     <div class="graphWindow col-md-12">
         <graph-view d3-links="createdLinks" d3-nodes="createdNodes"> </graph-view>
 
