--- a/front/app/components/searchBar/searchBar.html
+++ b/front/app/components/searchBar/searchBar.html
@@ -2,7 +2,7 @@
     <form class="col-md-12  marginTop10 searchSection" ng-submit="sendData()">
         <label for="searchInput" class="searchLabel"><i class="icon-search"></i> Search the Graph : </label>
         <input id="searchInput" class="input-lg" type="text" placeholder="{{ searchTitle }}">
-        <button class="btn btn-success btn-lg btnSearchInput" type="submit">Enter</button>
+        <button class="btn btn-success btn-lg btnSearchInput" type="submit">Enter <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
     </form>
 </div>
 
