--- a/front/assets/css/custom.css
+++ b/front/assets/css/custom.css
@@ -82,12 +82,13 @@ html, body {
     margin-right: 10px;
 }
 input {
-    transition: 700ms;
+    transition: 800ms;
     outline: none;
     border :  2px solid #303030;
 }
 input:focus {
     border:2px solid #00b3ee;
+    box-shadow: none !important;
 }
 #searchInput {
     width: 50%;
@@ -126,6 +127,7 @@ input:focus {
 }
 .btnSearchInput {
     width: 10%;
+    margin: 10px 15px 15px 15px;
 }
 .menuList li {
 }
