--- a/front/assets/css/custom.css
+++ b/front/assets/css/custom.css
@@ -131,7 +131,16 @@ input:focus {
 }
 .menuList li {
 }
-
+.nodeToolTip {
+    color: white;
+    padding: 5px 4px;
+    font-size: 20px;
+}
+.nodeToolTipEdges {
+    color: #F9F5A5;
+    padding: 5px 4px;
+    font-size: 16px;
+}
 .menuList li :hover {
    background-color: #7186A4;
     color: #061A37;
