data from db to front sent correctly

--- a/front/assets/css/custom.css
+++ b/front/assets/css/custom.css
@@ -66,6 +66,9 @@ html, body {
     color:white ;
     float: left;
 }
+#searchLimit {
+    width : 60px;
+}
 .logoImage {
     margin-left: 10px;
     margin-top: 5px;
