--- a/front/app/components/searchBar/searchBar.html
+++ b/front/app/components/searchBar/searchBar.html
@@ -3,10 +3,10 @@
         <label for="searchInput" class="searchLabel"><i class="icon-search"></i> Search the Graph : </label>
         <input id="searchInput" ng-model="field.queryInput" class="input-lg" type="text" placeholder="{{ searchTitle }}" required>
         <button class="btn btn-success btn-lg btnSearchInput" ng-disabled="searchForm.$invalid" ng-click="sendData(field)" type="submit">Enter <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-        <div class="col-sm-8 col-sm-offset-2">
-            <label for="searchLimit" class="searchLabel">Limit : </label>
-            <input id="searchLimit" ng-model="field.queryLimit" class="input-sm" type="text" placeholder="Limit" required>
-        </div>
+        <!--<div class="col-sm-8 col-sm-offset-2">-->
+            <!--<label for="searchLimit" class="searchLabel">Limit : </label>-->
+            <!--<input id="searchLimit" ng-model="field.queryLimit" class="input-sm" type="text" placeholder="Limit" required>-->
+        <!--</div>-->
     </form>
 </div>
 
