--- a/front/assets/css/custom.css
+++ b/front/assets/css/custom.css
@@ -221,6 +221,49 @@ input:focus {
     background-color: white;
     color: #061A37 !important;
 }
+
+fieldset {
+    font-family: sans-serif;
+    border: 5px solid #2C476D;
+    background: #ddd;
+    border-radius: 5px;
+    padding: 15px;
+    text-align: center;
+}
+
+fieldset legend {
+    background: #2C476D;
+    color: #fff;
+    padding: 15px 20px ;
+    font-size: 32px;
+    border-radius: 5px;
+    box-shadow: 0 0 0 5px #7186A4;
+    margin-left: 20px;
+}
+
+
+.style-1 input[type="text"] {
+    margin: 0;
+    font-family: sans-serif;
+    font-size: 18px;
+    box-shadow: none;
+    border-radius: 0;
+    padding: 10px;
+    border: solid 1px #dcdcdc;
+    transition: box-shadow 0.3s, border 0.3s;
+}
+.style-1 input[type="text"]:focus,
+.style-1 input[type="text"].focus {
+    outline: none;
+    border: solid 1px #707070;
+    box-shadow: 0 0 5px 1px #969696;
+}
+.labelInline {
+    display: inline-block ;
+}
+.listStyle {
+    margin-top: 10px;
+}
 /* As hex codes */
 
 .color-primary-0 { color: #2C476D }	/* Main Primary color */
