search graph gets tech names and draws graph

--- a/front/app/components/searchTechs/secondPage/searchedGraph.html
+++ b/front/app/components/searchTechs/secondPage/searchedGraph.html
@@ -1,7 +1,7 @@
 
 
 
-<div class="col-md-12 marginTop10" ng-controller="searchTechsCtrl">
+<div class="col-md-12 marginTop10" ng-controller="searchedTechsViewCtrl">
 
     <fieldset class="searchTech ">
         <legend>Search Technology Graph</legend>
