--- a/front/app/components/searchTechs/firstPage/searchTechsFirst.html
+++ b/front/app/components/searchTechs/firstPage/searchTechsFirst.html
@@ -11,6 +11,8 @@
             <button class="btn btn-success btn-lg marginTop10" ng-click="searchGraph('/searchTechs/second')">Search Graph</button>
 
         </ul>
+        <label class="labelInline" for="threshHold">Thresh hold:</label>
+        <input id="threshHold" type="text" ng-model="threshHold">
         <button class="btn btn-success marginTop10" ng-click="addField()">Add input</button>
         <button class="btn btn-danger marginTop10" href="#/second" ng-click="deleteField()">Delete input</button>
 
