traverse depth asserted

--- a/front/app/components/searchTechs/firstPage/searchTechsFirst.html
+++ b/front/app/components/searchTechs/firstPage/searchTechsFirst.html
@@ -13,6 +13,8 @@
         </ul>
         <label class="labelInline" for="threshHold">Thresh hold:</label>
         <input id="threshHold" type="text" ng-model="threshHold">
+        <label class="labelInline" for="traverseDepth">traverse Depth:</label>
+        <input id="traverseDepth" type="text" ng-model="traverseDepth">
         <button class="btn btn-success marginTop10" ng-click="addField()">Add input</button>
         <button class="btn btn-danger marginTop10" href="#/second" ng-click="deleteField()">Delete input</button>
 
