--- a/front/app/components/searchTechs/secondPage/searchedGraph.html
+++ b/front/app/components/searchTechs/secondPage/searchedGraph.html
@@ -31,6 +31,9 @@
             <span ng-repeat="item in searchedTechs">{{item}}, </span>
 
         </div>
+        <div class="col-md-12 marginTop10">
+            <a class="btn btn-success btn-lg marginTop10" href="#/searchTechs/first">Back</a>
+        </div>
     </fieldset>
 
 </div>
