--- a/front/app/components/searchTechs/secondPage/searchedGraph.html
+++ b/front/app/components/searchTechs/secondPage/searchedGraph.html
@@ -30,7 +30,7 @@
             </span>
             <span ng-repeat="item in searchedTechs">{{item}}, </span>
             <span class="floatRight">
-                <a class="btn btn-success btn-lg " href="#/searchTechs/first">Back</a>
+                <a class="btn btn-warning btn-lg " href="#/searchTechs/first">Back</a>
             </span>
         </div>
 
